--- a/src/main/java/com/hrodriguesdev/gui/fxml/mainView.fxml
+++ b/src/main/java/com/hrodriguesdev/gui/fxml/mainView.fxml
@@ -1,16 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="326.0" prefWidth="359.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="326.0" prefWidth="359.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox alignment="CENTER" prefHeight="326.0" prefWidth="359.0">
+      <VBox alignment="CENTER" prefHeight="326.0" prefWidth="359.0" style="-fx-background-color: #696969;">
          <children>
-            <Button mnemonicParsing="false" text="Button" />
-            <Button mnemonicParsing="false" text="Button" />
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Seleciona o Forno">
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="Comic Sans MS" size="33.0" />
+               </font>
+            </Text>
+            <Button mnemonicParsing="false" onAction="#fornoUm" prefHeight="74.0" prefWidth="258.0" style="-fx-background-radius: 10;" text="FORNO 01">
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
+               <font>
+                  <Font name="Comic Sans MS" size="35.0" />
+               </font></Button>
+            <Button mnemonicParsing="false" onAction="#fornoDois" prefHeight="74.0" prefWidth="258.0" style="-fx-background-radius: 10;" text="FORNO 02">
+               <font>
+                  <Font name="Comic Sans MS" size="35.0" />
+               </font>
+            </Button>
          </children>
       </VBox>
    </children>
