--- a/src/main/java/com/hrodriguesdev/gui/fxml/fornoView.fxml
+++ b/src/main/java/com/hrodriguesdev/gui/fxml/fornoView.fxml
@@ -47,14 +47,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="495.0" prefWidth="1092.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="495.0" prefWidth="1092.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox layoutX="10.0" layoutY="10.0" prefHeight="495.0" prefWidth="1092.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <AnchorPane prefHeight="25.0" prefWidth="1092.0">
                <children>
-                  <Text layoutX="438.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forno 1" wrappingWidth="216.13671875">
+                  <Text fx:id="forno" layoutX="438.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forno 1" wrappingWidth="216.13671875">
                      <font>
                         <Font name="Comic Sans MS Italic" size="43.0" />
                      </font>
